--- a/FrontEnd/Angular projects/library-app-ver3-secure/src/app/components/menu-component/menu-component.component.html
+++ b/FrontEnd/Angular projects/library-app-ver3-secure/src/app/components/menu-component/menu-component.component.html
@@ -9,12 +9,14 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="login">Login</a>
           </li>
-          <li class="nav-item">
+        
+          <li *ngIf="isLoggedIn=='true'" class="nav-item">
             <a class="nav-link" href="books">Books</a>
           </li>
-          <li class="nav-item">
+          <li *ngIf="isLoggedIn=='true'"  class="nav-item">
             <a class="nav-link" href="addbook/0">Add Book</a>
           </li>
+       
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Dropdown link
@@ -22,7 +24,7 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <li><a class="dropdown-item" href="#">Action</a></li>
               <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Log off</a></li>
+              <li><a class="dropdown-item" href="#"(click)="logout()" >Log off</a></li>
             </ul>
           </li>
         </ul>
